D言語版ac-libraryを追加

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -44,7 +44,7 @@ jobs:
                 test
           exclude: |
                 .github/
-                atcoder
+                acl
           # If you have config.toml
           config: .verify-helper/config.toml
       - name: parse-doxygen
