--- a/.verify-helper/config.toml
+++ b/.verify-helper/config.toml
@@ -1,5 +1,5 @@
 [languages.d]
-compile = "mkdir -p {tmpdir}/dlang && wget https://dlang.org/install.sh -O {tmpdir}/dlang/install.sh && chmod +x {tmpdir}/dlang/install.sh && {tmpdir}/dlang/install.sh install ldc-1.36.0 && . {tmpdir}/dlang/ldc-1.36.0/activate && ldc2 {path} -O -release --of={tempdir}/judge -I={basedir} -i"
+compile = "mkdir -p {tempdir}/dlang && wget https://dlang.org/install.sh -O {tempdir}/dlang/install.sh && chmod +x {tempdir}/dlang/install.sh && {tempdir}/dlang/install.sh install ldc-1.36.0 && . {tempdir}/dlang/ldc-1.36.0/activate && ldc2 {path} -O -release --of={tempdir}/judge -I={basedir} -i"
 execute = "{tempdir}/judge"
 bundle = "false"
 list_dependencies = "sed 's/^import \\(.*\\);$/\\1/ ; t ; d' {path} | sed 's/\\./\\//g' | sed 's/^\\(.*\\)$/\\1.d/g'"
